--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
                 </div>
                 <form onsubmit="login(); return false;" class="form-container">
                     <div class="input-img">
-                        <input id="email" class="input-login" required placeholder="Email" type="email"><img src="img/Email.svg">
+                        <input id="email" class="input-login" required placeholder="Email" type="email"><img
+                            src="img/Email.svg">
                     </div>
                     <div class="input-img">
-                        <input id="password" class="input-login" required placeholder="Password" type="password"><img src="img/password.svg">
+                        <input id="password" class="input-login" required placeholder="Password" type="password"><img
+                            src="img/password.svg">
                     </div>
                     <div class="checkbox-container">
                         <input id="rememberMe" class="checkbox-login" checked type="checkbox">
                         <p>Remember me</p>
                         <a class="blue" href="forgotMyPassword.html">
-                          Forgot my password
+                            Forgot my password
                         </a>
                     </div>
                     <div class="login-btn">
