legal notice fixed

--- a/legal.html
+++ b/legal.html
@@ -18,7 +18,7 @@
 </head>
 
 <body onload="checkLoginStatus(), includeHTML()">
-    
+
     <div style="height: 80px;" w3-include-html="templates/desktop_template.html"></div>
 
     <div class="parentContainer">
@@ -30,27 +30,12 @@
 
             <h2>Angaben gemäß § 5 TMG</h2>
             <p>Hosny Fahim<br>
-                Muster-Str. 0<br>
-                08080 MusterStadt
+                Europaring.21<br>
+                51109 Köln
             </p>
-            <p> Gerhard Baliet <br>
-                detzweg 12<br>
-                187187 Panama</p>
-            <p>Yannik Morjan<br>
-                Muster-Str. 0<br>
-                08080 MusterStadt
-            </p>
-
             <h2>Kontakt</h2>
             <p>Telefon: +49 (0) 15735100250<br>
                 E-Mail: Hosny.fahim1990@gmail.com</p>
-
-            <p>Telefon: +49 (0) 1732831397<br>
-                E-Mail: gerhardbaliet@yahoo.de</p>
-
-            <p>Telefon: +49 (0) 123456789<br>
-                E-Mail: yannikmorjan@mustermail.de</p>
-
             <br>
             <h1>Datenschutz­erklärung</h1>
             <h2>1. Datenschutz auf einen Blick</h2>
@@ -98,23 +83,11 @@
             <h3>Hinweis zur verantwortlichen Stelle</h3>
             <p>Die verantwortliche Stelle für die Datenverarbeitung auf dieser Website ist:</p>
             <p>Hosny Fahim<br>
-                Muster-Str. 0<br>
-                08080 MusterStadt</p>
+                Europaring.21<br>
+                51109 Köln
+            </p>
             <p>Telefon: +49 (0) 15735100250<br>
                 E-Mail: Hosny.fahim1990@gmail.com</p>
-
-            <p> Gerhard Baliet <br>
-                detzweg 12
-                187187 Panama</p>
-            <p>Telefon: +49 (0) 1732831397<br>
-                E-Mail: gerhardbaliet@yahoo.de</p>
-
-            <p>Yannik Morjan<br>
-                Muster-Str. 0<br>
-                08080 MusterStadt</p>
-            <p>Telefon: +49 (0) 123456789<br>
-                E-Mail: yannikmorjan@mustermail.com</p>
-
             <p>Verantwortliche Stelle ist die natürliche oder juristische Person, die allein oder gemeinsam mit
                 anderen über die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.&nbsp;B. Namen,
                 E-Mail-Adressen o. Ä.) entscheidet.</p>
