--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </div>
                 <form onsubmit="login(); return false;" class="form-container">
                     <div class="input-img">
-                        <input id="email" class="input-login" required placeholder="Email" type="email"><img
-                            src="img/Email.svg">
+                        <input id="email" class="input-login" required placeholder="Email" type="email"
+                            pattern="^[^<>&]*$"><img src="img/Email.svg">
                     </div>
                     <div class="input-img">
                         <input id="password" class="input-login" required placeholder="Password" type="password"><img
