--- a/signUp.html
+++ b/signUp.html
@@ -32,11 +32,12 @@
                 </div>
                 <form onsubmit="addUser(); return false;" class="form-container">
                     <div class="input-img">
-                        <input class="input-login" required placeholder="Name" type="name" id="name"pattern="[a-zA-ZäÄöÖüÜß ]*"><img src="img/user.svg">
+                        <input class="input-login" required placeholder="Name" type="name" id="name"
+                            pattern="[a-zA-ZäÄöÖüÜß ]*"><img src="img/user.svg">
                     </div>
                     <div class="input-img">
-                        <input class="input-login" required placeholder="Email" type="email" id="email"><img
-                            src="img/Email.svg">
+                        <input class="input-login" required placeholder="Email" type="email" id="email"
+                            pattern="^[^<>&]*$"><img src="img/Email.svg">
                     </div>
                     <div class="input-img">
                         <input class="input-login" required placeholder="Password" type="password" id="password"><img
